# CoralGenerator

./: .gitattributes  .gitignore  check_CFD_all_corals.py  check_CFD_ready.py
Blender scripts/: align_corals.py  cut_objs.py  import_corals.py  import_objs.py  lower_obj.py  name_corals.py
CoralGenerator/: CMakeLists.txt  PerlinNoise.cpp  PerlinNoise.h  README.md  clustering.py  generateCoralReef  generateCoralReef.cpp  readObj.cpp  the_easy_way.py
CoralGenerator/generateCoralReef.dSYM/Contents/: Info.plist
CoralGenerator/generateCoralReef.dSYM/Contents/Resources/DWARF/: generateCoralReef
CoralGenerator/generateCoralReef.dSYM/Contents/Resources/Relocations/aarch64/: generateCoralReef.yml
CoralNet scripts/: allPatches.json  coOccurrences.json  coralnet_labels.json  fetchLabelsFromSource.js  findCoOccurences.js  labels.json  scrapeLabels.js  scrapePatches.js  scrape_labels.js
CoralTraits DB scripts/: getGrowthForms.js  getSpeciesID.js  growthForms.json  species.csv  speciesLabels.json
FINAL/: README.md  SI_catalog.json  blender.py  generate_coral_reef.py  generate_coral_reef_bb.py  generate_spatial_distribution.py  generate_species_abundance.py  generated_spatial_distribution.json  generated_species_abundance.json  spatial_distribution.json  species_abundance.json  species_analysis_results.json
GBIF scripts/: filter_occurences.js  filter_occurences.py  occurence_scrape.js  species_match.js
Geomorphic Zones/: analyze_results.py  filter_species_counts.js  performance_test.py  rtree_overlap.py  species_overlap.py  species_statistics.py  zone_form_chart.py
(+41 files in other folders)
